--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Build ubuntu using flippy's script"
+name: "Build ubuntu image and rootfs"
 author: "https://github.com/ophub/flippy-ubuntu-actions"
 description: "Ubuntu Image Builder"
 inputs:
